# ExternalRulesListBuilder

./: .editorconfig  .gitignore  README.md  out.md  pyproject.toml
.github/workflows/: generate.yml  scheduled.yml
external_rules_list_builder/: __main__.py  git.py  markdown.py
external_rules_list_builder/tools/: php_clean.py  php_inspections.py  php_md.py  php_stan.py  psalm.py  sonarqube.py  tool.py
implemented/: sonar_qube.json
