[tool.poetry]
name = "external-rules-list-builder"
version = "1.0.0"
description = ""
authors = ["Danil Ovchinnikov <danil42worker@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"
mypy = "^0.942"
flake8 = "^4.0.1"
types-requests = "^2.27.14"
pyupgrade = "^2.32.0"
flake8-bugbear = "^22.3.23"

[tool.black]
line-length = 120
target-version = ['py310']
exclude = '''
(
.git
| .mypy_cache
| .pytest_cache
)
'''

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.10"
exclude = "tests"
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
show_error_context = true
strict_equality = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
